<resources>
    <string name="app_name">ReimburseProject</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="emptyReimburseRequest">You don\'t have reimburse request in this project.</string>
    <string name="emptyReimburseRequestCategory">You don\'t have reimburse request in this category.</string>
    <string name="emptyProject">You don\'t have any project.</string>

    <string name="menu_logout">Log out</string>
    <string name="menu_settings">Settings</string>

    <string name="categoryTransportation">Transportation</string>
    <string name="categoryConsumption">Food</string>
    <string name="categoryAccommodation">Accommodation</string>
    <string name="categoryAll">All</string>

    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="submit_reimburse_msg">Submitting your reimburse request, please do not close the application…</string>
    <string name="fetch_reimburse_msg">Fetching your reimburses list…</string>
    <string name="fetch_reimburse_data_msg">Fetching reimburse data...</string>
    <string name="fetch_project_msg">Fetching your projects list…</string>
    <string name="empty_cost_msg">Please fill the Reimburse Cost.</string>
    <string name="empty_date_msg">Please enter the date.</string>
    <string name="empty_details_msg">Please enter the details.</string>
    <string name="empty_file_msg">Please attach a proof.</string>


    <!--ERROR MESSAGES-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_msg_fetch_reimburse">We were unable to fetch your requests list. Please check your connection.</string>
    <string name="error_msg_fetch_reimburse_detail">Failed to fetch your reimburse data. Please check your connection.</string>
    <string name="error_msg_fetch_project">We were unable to fetch your projects list. Please check your connection.</string>
    <string name="error_msg_login_fail_connection">Failed to log you in to the server. Please check your connection.</string>

    <string name="total_cost_label">Total cost</string>
    <string name="choose_attachment_label">Choose file</string>
    <string name="attachment_label">Receipt</string>
    <string name="date_label">Date</string>
    <string name="reimburse_detail_date_label">Date and time request submitted</string>
    <string name="detail_label">Details</string>
    <string name="cost_label">Cost</string>
    <string name="category_label">Category</string>
    <string name="status_label">Status</string>

    <string name="button_reimburse_detail_back">Back</string>
    <string name="button_reimburse_detail_delete">Delete</string>
    <string name="button_reimburse_new_save">Save</string>
    <string name="button_reimburse_new_cancel">Cancel</string>

    <string name="reimburse_status_pending">PENDING</string>
    <string name="reimburse_status_accepted">ACCEPTED</string>
    <string name="reimburse_status_rejected">REJECTED</string>

    <string name="confirmation_positive">Yes</string>
    <string name="confirmation_negative">No</string>
    <string name="delete_reimburse_msg_title">Are you sure you want to delete this reimburse request?</string>
    <string name="delete_reimburse_msg">Note: this process cannot be undone.</string>
    <string name="reimburse_deleted_success">Reimburse deleted.</string>
    <string name="reimburse_delete_error_msg">Failed to delete reimburse request. Please check your connection.</string>
    <string name="reimburse_deleted_failed">Failed to delete reimburse request. Server error.\\nPlease try again later.</string>
    <string name="reimburse_new_failed">Failed to submit your request. Please check your connection.</string>
    <string name="reimburse_new_success">Request submitted.</string>
    <string name="logged_out_msg">You have logged out. You can log in again.</string>
    <string name="logging_in_msg">Logging in...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
</resources>