<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/addReimburseRelativeLayout">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/tvJenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/category_label"
            android:textColor="@color/textPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cost_label"
            android:textColor="@color/textPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Rp"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etBiaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:inputType="number"
                android:textColorHint="@color/textPrimary" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/date_label"
            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/etTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:textColorHint="@color/textPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/detail_label"
            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/etKeterangan"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/roundededittext"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/attachment_label"
            android:textColor="@color/textPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/btCamera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/roundedbutton"
                android:src="@drawable/ic_photo_camera" />

            <Button
                android:id="@+id/btUpload"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.05"
                android:background="@drawable/roundedbutton"
                android:text="@string/choose_attachment_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivStruk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0.4"
                android:background="@color/textPrimary"
                android:backgroundTint="@color/white" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Konsumsi"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/button_reimburse_new_save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorDivider"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/button_reimburse_new_cancel" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

